5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4015/executions/1590_2895.log
== TEST (2019-03-25 14:26:22) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:26:23) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
-- EXECUTION TIME:
0.140391
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:26:25) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:40) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
b=5
c=7
total=(a+b+(a+c))
print(total)
-- OUTPUT:
52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:54:42) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
b=5
c=7
total=(a+b+(a+c))
print(total)
-- EXECUTION TIME:
0.204206
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
52
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
52
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:55:44) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
b=5
total=(a*4+c)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(a*4+c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:46) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
b=5
total=(a*4+c)
print(total)
-- EXECUTION TIME:
0.12681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total=(a*4+c)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:47) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
b=5
total=(a*4+c)
print(total)
-- EXECUTION TIME:
0.179324
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total=(a*4+c)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:47) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
b=5
total=(a*4+c)
print(total)
-- EXECUTION TIME:
0.244725
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total=(a*4+c)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:47) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
b=5
total=(a*4+c)
print(total)
-- EXECUTION TIME:
0.198337
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total=(a*4+c)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:48) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
b=5
total=(a*4+c)
print(total)
-- EXECUTION TIME:
0.343261
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total=(a*4+c)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:48) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
b=5
total=(a*4+c)
print(total)
-- EXECUTION TIME:
0.322238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total=(a*4+c)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:48) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
b=5
total=(a*4+c)
print(total)
-- EXECUTION TIME:
0.428748
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total=(a*4+c)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:55:51) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(a*4+c)
print(total)
-- OUTPUT:
85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:53) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(a*4+c)
print(total)
-- EXECUTION TIME:
0.19649
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
85
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
85
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:56:08) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(a*4)+c
print(total)
-- OUTPUT:
85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:56:10) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(a*4)+c
print(total)
-- EXECUTION TIME:
0.137532
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
85
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
85
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:58:05) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
total=(var*4)+c
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=(var*4)+c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:07) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
total=(var*4)+c
print(total)
-- EXECUTION TIME:
0.182414
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 3, in <module>
    total=(var*4)+c
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:58:08) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
total=(var*4)+c
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=(var*4)+c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:08) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
total=(var*4)+c
print(total)
-- EXECUTION TIME:
0.2049
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 3, in <module>
    total=(var*4)+c
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:24) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*4)+c
print(total)
-- EXECUTION TIME:
0.14913
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
53.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
45.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
989.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:25) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*4)+c
print(total)
-- EXECUTION TIME:
0.141419
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
53.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
53.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
45.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:25) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*4)+c
print(total)
-- EXECUTION TIME:
0.181216
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
53.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
45.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:25) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*4)+c
print(total)
-- EXECUTION TIME:
0.215032
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
53.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
45.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
989.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:26) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*4)+c
print(total)
-- EXECUTION TIME:
0.281698
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
45.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
989.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:26) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*4)+c
print(total)
-- EXECUTION TIME:
0.437603
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
989.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:24) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:59:26) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.155907
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
245.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
205.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
4925.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:59:26) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.131993
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
245.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
245.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
205.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:59:27) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.173489
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
245.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
245.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
245.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:27) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:59:27) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.297047
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
205.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
205.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:59:27) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.169051
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
245.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
4925.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:59:27) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a=20
c=5
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.280652
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
4925.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:41) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:59:42) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.200224
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
245.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
205.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
4925.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:42) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:42) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:43) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:43) 
-- CODE:
var =float(input("Quantos jogos vão ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:00:37) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:00:37) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:00:37) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:00:37) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:00:37) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- OUTPUT:
245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:00:38) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.11873
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
245.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
205.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
4925.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:00:39) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.159505
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
245.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
205.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
205.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:00:39) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a= 20
c= 5
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.194268
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
205.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
205.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
4925.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:02:35) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a   =float(input("Valor unitario de cada jogo"))
c   =float(input("Valor do frete"))
total=(var*a)+c
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:02:37) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a   =float(input("Valor unitario de cada jogo"))
c   =float(input("Valor do frete"))
total=(var*a)+c
print(total)
-- EXECUTION TIME:
0.16625
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:02:37) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a   =float(input("Valor unitario de cada jogo"))
c   =float(input("Valor do frete"))
total=(var*a)+c
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:02:42) 
-- CODE:
var =float(input("Quantos jogos vao ser comprados?"))
a   =float(input("Valor unitario de cada jogo"))
c   =float(input("Valor do frete"))
total=(var*a)+c
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
